Fixed HTML URLs typo ver6

--- a/server/views/admin.ejs
+++ b/server/views/admin.ejs
@@ -45,7 +45,7 @@
                       Opciones
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="https://152.70.118.197:8383/login">Admin</a></li>
+                      <li><a class="dropdown-item" href="https://aurotax.com/login">Admin</a></li>
                       <li><a class="dropdown-item" href="formOpt1.html">Formulario1</a></li>
                       <li><a class="dropdown-item" href="formOpt2.html">Formulario2</a></li>
                     </ul>
