Enabled captcha, fixed DELETE method in admin, updated env username and password

--- a/server/views/admin.ejs
+++ b/server/views/admin.ejs
@@ -217,7 +217,7 @@
     function deleteById(idtaxpayer) {
         $.ajax({
             type: "DELETE",
-            url: `${ApiUrl}/${idtaxpayer}`,
+            url: `${ApiUrl}?idTaxPayer=${idtaxpayer}`,
             dataType: "json",
             crossDomain: true,
             data: JSON.stringify({ idtaxpayer: idtaxpayer }),
