Fixed URLs from localhost to aurotax

--- a/server/views/admin.ejs
+++ b/server/views/admin.ejs
@@ -175,7 +175,8 @@
 </html>
 
 <script>
-    const baseUrl2 = "http://localhost:8383";
+    //const baseUrl2 = 'http://localhost:8383';
+    const baseUrl2 = "https://aurotax.com";
     const postUrl2 = "/decrypted";
     const ApiUrl ="https://gd05688e24a07c4-aurotaxbd.adb.ca-montreal-1.oraclecloudapps.com/ords/admin/taxpayer/taxpayer";
 
